--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   speech_to_text: ^7.0.0
   flutter_tts: ^4.2.3
   provider: ^6.1.5
+  logger: ^2.5.0
 
 dev_dependencies:
   flutter_test:
